[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['virtue-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'virtue-runtime-wasm'
version = '1.0.0'
[dependencies.virtue-runtime]
default-features = false
path = '..'
